# dracut-ubuntu-core

./: README.md  build-in-lxc.sh  build-initrd.sh  build-snap.sh  dracut.conf.in  meson.build
debian/: changelog  control  copyright
modules/core/: meson.build  module-setup.sh
modules/core-bootchart/: meson.build  module-setup.sh
modules/core-default-hostname/: meson.build  module-setup.sh
modules/core-feature-server/: meson.build  module-setup.sh
modules/core-journald-console/: meson.build  module-setup.sh
modules/core-modules/: meson.build  module-setup.sh
modules/core-mounts/: meson.build  module-setup.sh
modules/core-recovery-chooser-trigger/: meson.build  module-setup.sh
modules/core-shell/: debug-shell.conf  emergency.conf  meson.build  module-setup.sh
modules/core-snap-bootstrap/: meson.build  module-setup.sh
snap/: snapcraft.yaml
