project('dracut-ubuntu-core')

dracut = dependency('dracut')
modulesdir = dracut.get_pkgconfig_variable('dracutmodulesdir')

subdir('modules/core')
subdir('modules/core-bootchart')
subdir('modules/core-default-hostname')
subdir('modules/core-journald-console')
subdir('modules/core-modules')
subdir('modules/core-mounts')
subdir('modules/core-recovery-chooser-trigger')
subdir('modules/core-shell')
subdir('modules/core-snap-bootstrap')
